--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "@google/genai": "^1.27.0",
-    "react": "^19.2.0",
+    "react": "^18.3.1",
     "@supabase/supabase-js": "^2.77.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "@stripe/stripe-js": "^3.0.7",
-    "@stripe/react-stripe-js": "^2.6.0"
+    "@stripe/react-stripe-js": "^2.6.0",
+    "@vitejs/plugin-react": "^5.1.1",
+    "vite": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
